Fix(GC): Update hass config and remove force init

--- a/clusters/galaxy-cluster/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
@@ -28,7 +28,7 @@ spec:
           setup-config:
             enabled: true
             env:
-              FORCE_INIT: true
+              FORCE_INIT: false
             image:
               repository: mikefarah/yq
               tag: "4"
