Feat(GC): Add tibber api key as environment variables to ha

--- a/clusters/galaxy-cluster/kubernetes/apps/default/home-assistant/app/external-secret.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/home-assistant/app/external-secret.yaml
@@ -16,8 +16,12 @@ spec:
       # Use inline templates to construct your desired config file that contains your secret
       data:
         DB_URL: '{{ printf "postgresql://generalApps:%s@local-database-rw.database.svc.cluster.local/homeassistant" .password }}'
+        TIBBER_API: '{{ .tibber }}'
 
   data:
   - secretKey: password
     remoteRef:
       key: "2414638d-a830-48e3-bcd1-b34500ed78c4"
+  - secretKey: tibber
+    remoteRef:
+      key: "9d2b3765-d8d7-49fc-836b-b34b0053093b"
