Fix(GC): fix some of the issues of tailscale-sr

--- a/clusters/planet-cluster/bootstrap/helmfile.yaml
+++ b/clusters/planet-cluster/bootstrap/helmfile.yaml
@@ -43,5 +43,20 @@ releases:
     version: 9.1.27
     needs: ['kube-system/cilium']
 
+  - name: flux-operator
+    namespace: flux-system
+    atomic: true
+    chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
+    version: 0.28.0
+    values: ['../kubernetes/apps/flux-system/flux-operator/app/helm-values.yaml']
+    needs: ['cert-manager/cert-manager', 'kube-system/reflector']
+
+  - name: flux-instance
+    namespace: flux-system
+    atomic: true
+    chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-instance
+    version: 0.28.0
+    values: ['../kubernetes/apps/flux-system/flux-instance/app/helm-values.yaml']
+    needs: ['flux-system/flux-operator']
 
 
