--- a/clusters/planet-cluster/kubernetes/apps/network/tailscale-sr/app/external-secret.yaml
+++ b/clusters/planet-cluster/kubernetes/apps/network/tailscale-sr/app/external-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: njalla-api-secret
+  name: tailscale-sr-secrets
 spec:
   refreshInterval: 300s
   secretStoreRef:
