--- a/clusters/planet-cluster/kubernetes/apps/network/multus/ks.yaml
+++ b/clusters/planet-cluster/kubernetes/apps/network/multus/ks.yaml
@@ -36,6 +36,8 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+  dependsOn:
+    - name: multus
   wait: true
   interval: 30m
   retryInterval: 1m
