--- a/clusters/planet-cluster/kubernetes/apps/network/tailscale-sr/app/helmrelease.yaml
+++ b/clusters/planet-cluster/kubernetes/apps/network/tailscale-sr/app/helmrelease.yaml
@@ -88,7 +88,7 @@ spec:
     persistence:
       tmpfs:
         advancedMounts:
-          tailscale:
+          tailscale-sr:
             app:
               - path: /.cache
                 subPath: cache
