--- a/clusters/planet-cluster/kubernetes/apps/network/tailscale-sr/ks.yaml
+++ b/clusters/planet-cluster/kubernetes/apps/network/tailscale-sr/ks.yaml
@@ -25,3 +25,5 @@ spec:
     substituteFrom:
       - name: cluster-secrets
         kind: Secret
+      - name: tailscale-sr-secrets
+        kind: Secret
