Chore(PC): Disable multus deployment

--- a/clusters/planet-cluster/kubernetes/apps/network/multus/networks/lan-1.yaml
+++ b/clusters/planet-cluster/kubernetes/apps/network/multus/networks/lan-1.yaml
@@ -21,9 +21,12 @@ spec:
               }
             ],
             "routes": [
-              { "dst": "0.0.0.0/0" }
+              { "dst": "192.168.231.0/24" }
             ]
           }
+        },
+        {
+          "type": "sbr"
         }
       ]
     }
