--- a/clusters/galaxy-cluster/talos/patches/global/kubelet.yaml
+++ b/clusters/galaxy-cluster/talos/patches/global/kubelet.yaml
@@ -1,5 +1,7 @@
 machine:
   kubelet:
+    extraArgs:
+      allowed-unsafe-sysctls: 'net.ipv4.ip_forward,net.ipv6.conf.all.forwarding'
     extraConfig:
       serializeImagePulls: false
     nodeIP:
