--- a/clusters/galaxy-cluster/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
@@ -10,6 +10,13 @@ spec:
     kind: OCIRepository
     name: app-template
     namespace: flux-system
+  install:
+    remediation:
+      retries: 1
+  upgrade:
+    cleanupOnFail: true
+    remediation:
+      retries: 0
   values:
     controllers:
       home-assistant:
@@ -45,6 +52,7 @@ spec:
             command: ["bash", "-c", "cd /config && wget -O - https://get.hacs.xyz | bash -"]
         
           init-route:
+            enabled: false
             image:
               repository: alpine
               tag: 3.22.1
