--- a/clusters/galaxy-cluster/kubernetes/apps/network/tailscale-sr/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/tailscale-sr/app/helmrelease.yaml
@@ -27,14 +27,14 @@ spec:
             env:
               NO_AUTOUPDATE: true
               PORT: &tailnetPort 45387
-              TS_EXTRA_ARGS: --accept-routes --advertise-exit-node --advertise-tags=tag:subnet-router
-              TS_HOSTNAME: "tailscale-subnet-router"
+              TS_EXTRA_ARGS: --accept-routes
+              TS_HOSTNAME: "tailscale-galaxy"
               TS_KUBE_SECRET: ""
-              TS_ROUTES: "${NET_MANAGEMENT_CIDR},${NET_HOME_CIDR},${NET_SMARTHOME_CIDR},${NET_LEGACY_HOME_CIDR}"
+              TS_ROUTES: "192.168.31.0/24,10.21.0.0/16"
               TS_STATE_DIR: &path /tmp
               TS_TAILSCALED_EXTRA_ARGS: --debug=0.0.0.0:9001
               TS_USERSPACE: true
-              TZ: "${CLUSTER_TIME_ZONE}"
+              TZ: "${SECRET_TZ}"
             image:
               repository: ghcr.io/tailscale/tailscale
               tag: v1.86.5@sha256:9e2bfdd9e2ce724df53f976d06a4a9933aa730dc655ace42798f4c73735d1cac
@@ -68,6 +68,11 @@ spec:
               readOnlyRootFilesystem: true
     defaultPodOptions:
       securityContext:
+        sysctls:
+          - name: net.ipv4.ip_forward
+            value: "1"
+          - name: net.ipv6.conf.all.forwarding
+            value: "1"
         fsGroup: 568
         runAsGroup: 568
         runAsNonRoot: true
@@ -75,40 +80,3 @@ spec:
         seccompProfile:
           type: RuntimeDefault
       shareProcessNamespace: true
-      affinity:
-        podAntiAffinity:
-          preferredDuringSchedulingIgnoredDuringExecution:
-            - weight: 100
-              podAffinityTerm:
-                labelSelector:
-                  matchExpressions:
-                    - key: app.kubernetes.io/name
-                      operator: In
-                      values:
-                        - blocky
-                topologyKey: kubernetes.io/hostname
-
-    service:
-      app:
-        controller: blocky
-        labels:
-          network: lan
-        annotations:
-          "lbipam.cilium.io/sharing-key": "blocky-shared"
-          "lbipam.cilium.io/ips": "192.168.31.36"
-        ports:
-          dns-udp:
-            port: 53
-            protocol: UDP
-          dns-tcp:
-            port: 53
-            protocol: TCP
-        type: LoadBalancer
-
-      metrics:
-        controller: blocky
-        type: ClusterIP
-        ports:
-          http:
-            port: 4000
-            primary: true
