--- a/clusters/galaxy-cluster/kubernetes/apps/redis/redis-operator/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/redis/redis-operator/app/helmrelease.yaml
@@ -18,7 +18,7 @@ spec:
   chart:
     spec:
       chart: redis-operator
-      version: 0.21.2
+      version: 0.22.0
       sourceRef:
         kind: HelmRepository
         name: redis
@@ -31,21 +31,36 @@ spec:
     remediation:
       retries: 3
   values:
-    operator:
-      prometheus:
-        enabled: true
-        serviceMonitor:
-          enabled: true
-      dashboards:
-        enabled: true
-        annotations:
-          grafana_folder: Cilium
-    prometheus:
+    redisOperator:
+      webhook: true
+    
+    issuer:
+    # Whether to create the issuer or not. You might want to disable this if instead you
+    # want to use a ClusterIssuer that you simply want to provide.
+      create: true
+      kind: Issuer
+      type: selfSigned
+      name: redis-operator-issuer
+
+    service:
+      name: webhook-service
+      namespace: redis  
+
+    certmanager:
+      # Whether to use cert-manager for certificate management
+      # Only effective when webhook=true
+      # If webhook=true and certmanager.enabled=false, you need to manually create certificate secret
       enabled: true
-      serviceMonitor:
-        enabled: true
-        trustCRDsExist: true
-    dashboards:
-      enabled: true
-      annotations:
-        grafana_folder: Cilium
+      # API version of the cert-manager CRDs
+      apiVersion: "cert-manager.io/v1"
+
+    podSecurityContext: 
+      fsGroup: 1000
+
+    securityContext:
+      capabilities:
+        drop:
+        - ALL
+      readOnlyRootFilesystem: true
+      runAsNonRoot: true
+      runAsUser: 1000
