--- a/clusters/galaxy-cluster/kubernetes/apps/redis/kustomization.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/redis/kustomization.yaml
@@ -4,5 +4,5 @@ kind: Kustomization
 resources:
   - ./namespace.yaml
   - ./redis-operator/ks.yaml
-#  - ./redis-cluster/ks.yaml
+  - ./redis-cluster/ks.yaml
   
