Fix(GC): Add storage class to node pv

--- a/clusters/galaxy-cluster/kubernetes/apps/redis/redis-cluster/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/redis/redis-cluster/app/helmrelease.yaml
@@ -45,6 +45,7 @@ spec:
       nodeConfVolume: true
       nodeConfVolumeClaimTemplate:
         spec:
+          storageClassName: "openebs-hostpath"
           accessModes: ["ReadWriteOnce"]
           resources:
             requests:
