--- a/clusters/galaxy-cluster/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
@@ -1,4 +1,17 @@
 ---
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: OCIRepository
+metadata:
+  name: kube-prometheus-stack
+spec:
+  interval: 10m
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 77.6.1
+  url: oci://ghcr.io/prometheus-community/charts/kube-prometheus-stack
+---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
