Feat(GC): Finish authelia deployment

--- a/clusters/galaxy-cluster/kubernetes/apps/auth/authelia/app/external-secret.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/auth/authelia/app/external-secret.yaml
@@ -1,7 +1,8 @@
+---
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: lldap-secrets
+  name: authelia-secrets
 spec:
   refreshInterval: 300s
   secretStoreRef:
@@ -11,28 +12,28 @@ spec:
   data:
   - secretKey: jwk.RS256.pem
     remoteRef:
-      key: ""
+      key: "a9f55885-674f-4d3f-894f-b35901614596"
   - secretKey: identity_validation.reset_password.jwt.hmac.key
     remoteRef:
-      key: ""
+      key: "a644e209-75ab-4676-a936-b359015fb365"
   - secretKey: authentication.ldap.password.txt
     remoteRef:
-      key: ""
+      key: "2b09cd35-9557-4638-a37e-b359015c815d"
   - secretKey: session.encryption.key
     remoteRef:
-      key: ""
+      key: "375a103a-9751-411b-9d1f-b359016006e8"
   - secretKey: session.redis.password.txt
     remoteRef:
-      key: ""
+      key: "606a1e58-9574-47fb-ba64-b35500b1b6b6"
   - secretKey: storage.encryption.key
     remoteRef:
-      key: ""
+      key: "132705f0-3ab2-452a-ac41-b359016022f0"
   - secretKey: storage.postgres.password.txt
     remoteRef:
-      key: ""
+      key: "2414638d-a830-48e3-bcd1-b34500ed78c4"
   - secretKey: notifier.smtp.password.txt
     remoteRef:
-      key: ""
+      key: "e651583f-968d-4982-8d32-b359015e3edc"
   - secretKey: identity_providers.oidc.hmac.key
     remoteRef:
-      key: ""
+      key: "3a09f570-fc99-44e5-8893-b359015f4189"
