--- a/clusters/galaxy-cluster/kubernetes/apps/auth/authelia/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/auth/authelia/app/helmrelease.yaml
@@ -1,15 +1,26 @@
 ---
-# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: OCIRepository
+metadata:
+  name: authelia
+spec:
+  interval: 15m
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 0.10.46
+  url: oci://ghcr.io/home-operations/charts-mirror/authelia
+---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: lldap
+  name: authelia
 spec:
   interval: 30m
   chartRef:
     kind: OCIRepository
-    name: app-template
-    namespace: flux-system
+    name: authelia
   install:
     remediation:
       retries: 1
@@ -115,10 +126,10 @@ spec:
       notifier:
         smtp:
           enabled: true
-          address: ''    
+          address: 'submission://smtp.protonmail.ch:587'    
           sender: 'Plutode Inc. <support@plutode.com>'
           subject: '[Plutode Inc.] {title}'
-          username: ''
+          username: 'support@plutode.com'
       identity_providers:
         oidc:
           enabled: true
