--- a/clusters/galaxy-cluster/kubernetes/apps/network/blocky/app/blocky-config.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/blocky/app/blocky-config.yaml
@@ -27,6 +27,8 @@ customDNS:
     prometheus.de.plutode.com: 10.21.0.40
     temp.ha.de.plutode.com: 10.21.0.40
     ha.de.plutode.com: 10.21.0.40
+    auth.de.plutode.com: 10.21.0.40
+    a.de.plutode.com: 10.21.0.40
     mqtt.de.plutode.com: 10.11.0.111
     jellyfin.de.plutode.com: 10.21.0.31
     nas.de.plutode.com: 10.21.0.31
