--- a/clusters/galaxy-cluster/kubernetes/apps/auth/authelia/app/oidc-secrets.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/auth/authelia/app/oidc-secrets.yaml
@@ -13,3 +13,6 @@ spec:
   - secretKey: oidc_jwk_key
     remoteRef:
       key: "a9f55885-674f-4d3f-894f-b35901614596"
+  - secretKey: split_oidc_secret_digeset
+    remoteRef:
+      key: "393998a4-806f-4de7-ad15-b35901698db7"
