Fix(GC): Add the oidc secret to mounts

--- a/clusters/galaxy-cluster/kubernetes/apps/auth/authelia/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/auth/authelia/app/helmrelease.yaml
@@ -57,6 +57,8 @@ spec:
           items:
             - key: oidc_jwk_key
               path: jwk.RS256.pem
+            - key: split_oidc_secret_digeset
+              path: splitpro
     configMap:
       telemetry:
         metrics:
