--- a/clusters/galaxy-cluster/kubernetes/apps/default/kustomization.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/kustomization.yaml
@@ -8,4 +8,5 @@ resources:
   - ./prowlarr/ks.yaml
   - ./radarr/ks.yaml
   - ./jellyseerr/ks.yaml
+  - ./split-pro/ks.yaml
   - ./home-assistant/ks.yaml
