Fix(GC): Fix typo in authelia config

--- a/clusters/galaxy-cluster/kubernetes/apps/auth/authelia/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/auth/authelia/app/helmrelease.yaml
@@ -40,7 +40,7 @@ spec:
         secret: 'authelia-tls'
       traefikCRD:
         enabled: true
-        mdisableIngressRoute: true
+        disableIngressRoute: true
     pod:
       kind: 'DaemonSet'          
       securityContext:
