Fix(GC): Fix authelia path

--- a/clusters/galaxy-cluster/kubernetes/apps/auth/authelia/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/auth/authelia/app/helmrelease.yaml
@@ -37,7 +37,9 @@ spec:
       certManager: true
       rulesOverride:
         - host: "auth.${SECRET_DOMAIN}"
+          path: "/"
         - host: "a.${SECRET_DOMAIN}"
+          path: "/"
       tls:
         enabled: true
         secret: 'authelia-tls'
