Fix(GC): Add node local path to split

--- a/clusters/galaxy-cluster/kubernetes/apps/default/split-pro/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/split-pro/app/helmrelease.yaml
@@ -108,5 +108,11 @@ spec:
           split-pro:
             app:
               - path: /home/node/.cache 
+      node-local:
+        type: emptyDir
+        advancedMounts:
+          split-pro:
+            app:
+              - path: /home/node/.local
       tmp:
         type: emptyDir
