--- a/clusters/galaxy-cluster/kubernetes/apps/default/split-pro/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/split-pro/app/helmrelease.yaml
@@ -31,7 +31,6 @@ spec:
               tag: 1.5.3@sha256:4a456087fee1b25dbfb1f383fcb4e0785c4adaad9dacbda745bc9595d7d2cae0
             env:
               NEXTAUTH_URL: https://split.${SECRET_DOMAIN}
-              NEXTAUTH_URL_INTERNAL: http://localhost:3000
               DEFAULT_HOMEPAGE: /home
               DISABLE_EMAIL_SIGNUP: true
               FEEDBACK_EMAIL: split@plutode.com
@@ -70,7 +69,8 @@ spec:
       hostAliases:
         - ip: "10.21.0.40"
           hostnames:
-            - "split.${SECRET_DOMAIN}"     
+            - "split.${SECRET_DOMAIN}"
+            - "auth.${SECRET_DOMAIN}"
       securityContext:
         runAsNonRoot: true
         runAsUser: 1000
