--- a/clusters/galaxy-cluster/kubernetes/apps/redis/redis-cluster/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/redis/redis-cluster/app/helmrelease.yaml
@@ -1,13 +1,13 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: redis-cluster
+  name: redis-replication
 spec:
   interval: 30m
   chart:
     spec:
-      chart: redis-cluster
-      version: 0.17.0
+      chart: redis-replication
+      version: 0.16.8
       sourceRef:
         kind: HelmRepository
         name: redis
@@ -20,30 +20,18 @@ spec:
     remediation:
       retries: 3
   values:
-    redisCluster:
+    redisReplication:
       name: "local-redis"
-      # -- Default number of replicas for both leader and follower when not explicitly set
       clusterSize: 3
-      clusterVersion: v7
-      persistenceEnabled: true
       image: quay.io/opstree/redis
       tag: v7.0.15
       redisSecret:
         secretName: "redis-secrets"
         secretKey: "password"
-      enableMasterSlaveAntiAffinity: true
 
 
     storageSpec:
       volumeClaimTemplate:
-        spec:
-          storageClassName: "openebs-hostpath"
-          accessModes: ["ReadWriteOnce"]
-          resources:
-            requests:
-              storage: 2Gi
-      nodeConfVolume: true
-      nodeConfVolumeClaimTemplate:
         spec:
           storageClassName: "openebs-hostpath"
           accessModes: ["ReadWriteOnce"]
