Feat(GC): Update authelia to use redis sentinel

--- a/clusters/galaxy-cluster/kubernetes/apps/auth/authelia/app/external-secret.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/auth/authelia/app/external-secret.yaml
@@ -34,3 +34,6 @@ spec:
   - secretKey: identity_providers.oidc.hmac.key
     remoteRef:
       key: "3a09f570-fc99-44e5-8893-b359015f4189"
+  - secretKey: session.redis.sentinel.password.txt
+    remoteRef:
+      key: "606a1e58-9574-47fb-ba64-b35500b1b6b6"
