--- a/clusters/galaxy-cluster/talos/talconfig.yaml
+++ b/clusters/galaxy-cluster/talos/talconfig.yaml
@@ -119,11 +119,14 @@ nodes:
   - hostname: triangulum
     controlPlane: true
     ipAddress: 192.168.31.34
-    installDisk: /dev/nvme0n1
-    talosImageURL: factory.talos.dev/metal-installer/376567988ad370138ad8b2698212367b8edcb69b5fd68c80be1f2ec7d603b4ba
+    installDisk: /dev/vda
+    talosImageURL: factory.talos.dev/metal-installer/ce4c980550dd2ab1b17bbf2b08801c7eb59418eafe8f279833297925d67c7515
+    schematic:
+      customization:
+        systemExtensions:
+          officialExtensions:
+            - siderolabs/qemu-guest-agent
     networkInterfaces:
-      - interface: enp5s0
-        dhcp: false
       - interface: bond0
         addresses:
           - 192.168.31.34/24
@@ -140,7 +143,7 @@ nodes:
           updelay: 200
           downdelay: 200
           interfaces:
-            - enp7s0f0
+            - ens7
         dhcp: false
         vlans:
           - vlanId: 10
