--- a/clusters/galaxy-cluster/kubernetes/apps/network/tailscale-sr/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/tailscale-sr/app/helmrelease.yaml
@@ -20,6 +20,11 @@ spec:
   values:
     controllers:
       tailscale-sr:
+        annotations:
+          reloader.stakater.com/auto: "true"
+        pod:
+          annotations:
+            k8s.v1.cni.cncf.io/networks: network/multus-lan-1
         type: deployment
         replicas: 1
         containers:
@@ -27,14 +32,18 @@ spec:
             env:
               NO_AUTOUPDATE: true
               PORT: &tailnetPort 45387
-              TS_EXTRA_ARGS: --accept-routes
+              TS_DEBUG_MTU: 1420
               TS_HOSTNAME: "tailscale-galaxy"
               TS_KUBE_SECRET: ""
               TS_ROUTES: "192.168.31.0/24,10.21.0.0/16"
-              TS_STATE_DIR: &path /tmp
+              TS_STATE_DIR: &path /var/lib/tailscale
               TS_TAILSCALED_EXTRA_ARGS: --debug=0.0.0.0:9001
+              TS_SNAT_SUBNET_ROUTES: false
               TS_USERSPACE: true
               TZ: "${SECRET_TZ}"
+            envFrom:
+              - secretRef:
+                  name: tailscale-sr-secrets
             image:
               repository: ghcr.io/tailscale/tailscale
               tag: v1.86.5@sha256:9e2bfdd9e2ce724df53f976d06a4a9933aa730dc655ace42798f4c73735d1cac
@@ -59,6 +68,15 @@ spec:
                 cpu: 50m
                 memory: 250Mi
             securityContext:
+              fsGroup: 568
+              runAsGroup: 568
+              runAsNonRoot: true
+              runAsUser: 568
+              sysctls:
+                - name: net.ipv4.ip_forward
+                  value: "1"
+                - name: net.ipv6.conf.all.forwarding
+                  value: "1"
               allowPrivilegeEscalation: false
               capabilities:
                 add:
@@ -66,17 +84,22 @@ spec:
                 drop:
                   - ALL
               readOnlyRootFilesystem: true
-    defaultPodOptions:
-      securityContext:
-        sysctls:
-          - name: net.ipv4.ip_forward
-            value: "1"
-          - name: net.ipv6.conf.all.forwarding
-            value: "1"
-        fsGroup: 568
-        runAsGroup: 568
-        runAsNonRoot: true
-        runAsUser: 568
-        seccompProfile:
-          type: RuntimeDefault
-      shareProcessNamespace: true
+    persistence:
+      tmpfs:
+        advancedMounts:
+          tailscale-sr:
+            app:
+              - path: /.cache
+                subPath: cache
+              - path: /tmp
+                subPath: tmp
+              - path: /var/run
+                subPath: run
+        enabled: true
+        type: emptyDir
+      state:
+        existingClaim: tailscale-state
+        advancedMounts:
+          tailscale-sr:
+            app:
+              - path: /var/lib/tailscale
