--- a/clusters/galaxy-cluster/kubernetes/apps/network/tailscale-sr/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/tailscale-sr/app/helmrelease.yaml
@@ -44,6 +44,14 @@ spec:
               TS_SNAT_SUBNET_ROUTES: false
               TS_USERSPACE: true
               TZ: "${SECRET_TZ}"
+              POD_NAME:
+                valueFrom:
+                  fieldRef:
+                    fieldPath: metadata.name
+              POD_UID:
+                valueFrom:
+                  fieldRef:
+                    fieldPath: metadata.uid
             envFrom:
               - secretRef:
                   name: tailscale-sr-secrets
