Chore(GC): Remove tailscale deployment

--- a/clusters/galaxy-cluster/kubernetes/apps/network/kustomization.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/kustomization.yaml
@@ -5,5 +5,5 @@ resources:
   - ./namespace.yaml
   - ./blocky/ks.yaml
   - ./multus/ks.yaml
-  - ./tailscale-sr/ks.yaml
   - ./mosquitto/ks.yaml
+#  - ./tailscale-sr/ks.yaml
