Feat(GC): Readd tailscale-sr along with an init container to configure appropriate routes

--- a/clusters/galaxy-cluster/kubernetes/apps/network/kustomization.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/kustomization.yaml
@@ -6,4 +6,4 @@ resources:
   - ./blocky/ks.yaml
   - ./multus/ks.yaml
   - ./mosquitto/ks.yaml
-#  - ./tailscale-sr/ks.yaml
+  - ./tailscale-sr/ks.yaml
