--- a/clusters/galaxy-cluster/kubernetes/apps/network/multus/networks/lan-1.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/multus/networks/lan-1.yaml
@@ -9,19 +9,28 @@ spec:
     {
       "cniVersion": "0.3.1",
       "name": "multus-lan-1",
-      "type": "macvlan",
-      "master": "bond0",
-      "mode": "bridge",
-      "ipam": {
-        "type": "static",
-        "addresses": [
-          {
-            "address": "192.168.31.30/24",
-            "gateway": "192.168.31.1"
+      "plugins": [
+        {
+          "type": "macvlan",
+          "master": "bond0",
+          "mode": "bridge",
+          "ipam": {
+            "type": "static",
+            "addresses": [
+              {
+                "address": "192.168.31.30/24",
+                "gateway": "192.168.31.1"
+              }
+            ],
+            "routes": [
+              { "dst": "10.21.0.0/16" },
+              { "dst": "10.11.0.0/16" },
+              { "dst": "192.168.0.0/16" }
+            ]
           }
-        ],
-        "routes": [
-          { "dst": "0.0.0.0/0" }
-        ]
-      }
+        },
+        {
+          "type": "sbr"
+        }
+      ]
     }
