Fix(GC): Remove userspace tailscale networking

--- a/clusters/galaxy-cluster/kubernetes/apps/network/tailscale-sr/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/tailscale-sr/app/helmrelease.yaml
@@ -59,7 +59,7 @@ spec:
               TS_ROUTES: "192.168.31.0/24,10.21.0.0/16"
               TS_TAILSCALED_EXTRA_ARGS: --debug=0.0.0.0:9001
               TS_SNAT_SUBNET_ROUTES: false
-              TS_USERSPACE: true
+              TS_USERSPACE: false
               TZ: "${SECRET_TZ}"
               POD_NAME:
                 valueFrom:
