--- a/clusters/galaxy-cluster/kubernetes/apps/network/tailscale-sr/ks.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/tailscale-sr/ks.yaml
@@ -18,6 +18,8 @@ spec:
   wait: true
   dependsOn:
     - name: multus-networks
+    - name: generic-device-plugin
+      namespace: system
   interval: 30m
   retryInterval: 1m
   timeout: 5m
