--- a/clusters/galaxy-cluster/kubernetes/apps/network/tailscale-sr/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/tailscale-sr/app/helmrelease.yaml
@@ -57,7 +57,7 @@ spec:
               TS_HOSTNAME: "tailscale-galaxy"
               TS_KUBE_SECRET: "tailscale-state"
               TS_ROUTES: "192.168.31.0/24,10.21.0.0/16"
-              TS_TAILSCALED_EXTRA_ARGS: --debug=0.0.0.0:9001
+              TS_TAILSCALED_EXTRA_ARGS: --debug=0.0.0.0:9001 --tun=tailscale0 --netfilter-mode=off
               TS_SNAT_SUBNET_ROUTES: false
               TS_USERSPACE: false
               TZ: "${SECRET_TZ}"
