--- a/clusters/galaxy-cluster/kubernetes/apps/network/tailscale-sr/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/tailscale-sr/app/helmrelease.yaml
@@ -96,7 +96,7 @@ spec:
               allowPrivilegeEscalation: false
               capabilities:
                 add:
-                  - NET_BIND_SERVICE
+                  - NET_RAW
                   - NET_ADMIN
                 drop:
                   - ALL
