--- a/clusters/galaxy-cluster/kubernetes/apps/default/invidious/app/external-secret.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/invidious/app/external-secret.yaml
@@ -13,12 +13,12 @@ spec:
   - secretKey: invidious-hmac
     remoteRef:
       key: "223abe52-574f-420a-a88b-b21300e10fce"
-  - secretKey: invidious-po-token
+  - secretKey: invidious-companion-key
     remoteRef:
       key: "b3a06443-f5d2-4c3b-9d76-b21300e15f39"
-  - secretKey: invidious-visitor-data
+  - secretKey: postgresql-username
     remoteRef:
       key: "243f3fe8-f8b5-43b3-8673-b21300e18342"
-  - secretKey: pg-password
+  - secretKey: postgresql-password
     remoteRef:
       key: "2414638d-a830-48e3-bcd1-b34500ed78c4"
