--- a/clusters/galaxy-cluster/kubernetes/apps/default/invidious/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/invidious/app/helmrelease.yaml
@@ -5,7 +5,7 @@ metadata:
   name: invidious
 spec:
   interval: 1h
-  url: https://charts-helm.invidious.io
+  url: https://ildoc.github.io/invidious-helm-chart/
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
@@ -18,7 +18,7 @@ spec:
   chart:
     spec:
       chart: invidious
-      version: v2.3.0
+      version: v3.0.0
       sourceRef:
         kind: HelmRepository
         name: invidious
@@ -33,19 +33,3 @@ spec:
   valuesFrom:
     - kind: ConfigMap
       name: invidious-values
-    - targetPath: config.hmac_key
-      kind: Secret
-      name: invidious-secrets
-      valuesKey: invidious-hmac
-    - targetPath: config.po_token
-      kind: Secret
-      name: invidious-secrets
-      valuesKey: invidious-po-token
-    - targetPath: config.visitor_data
-      kind: Secret
-      name: invidious-secrets
-      valuesKey: invidious-visitor-data
-    - targetPath: config.db.password
-      kind: Secret
-      name: invidious-secrets
-      valuesKey: pg-password
