Fix(GC): Fix naming in invidious secret

--- a/clusters/galaxy-cluster/kubernetes/apps/default/invidious/app/external-secret.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/invidious/app/external-secret.yaml
@@ -10,7 +10,7 @@ spec:
     name: bitwarden-secretsmanager
     kind: ClusterSecretStore
   data:
-  - secretKey: invidious-hmac
+  - secretKey: hmac-key
     remoteRef:
       key: "223abe52-574f-420a-a88b-b21300e10fce"
   - secretKey: invidious-companion-key
